--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "babel-loader": "^8.0.6",
     "babel-tape-runner": "^3.0.0",
     "css-loader": "^3.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.5.0",
     "eslint-config-google": "^0.14.0",
     "file-loader": "^4.2.0",
