--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.5.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.16.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
