--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "author": "",
   "license": "ISC",
+  "private": true,
   "browserslist": "> 0.25%, not dead",
   "nyc": {
     "include": [
@@ -58,5 +59,6 @@
     "tape": "^4.11.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
-  }
+  },
+  "repository": "github:PartyLich/calculator-react"
 }
